--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,5 @@
 [build]
+  base = "my-upsc-ai"      # folder where package.json lives
   command = "npm run build"
   publish = ".next"
   functions = "netlify/functions"
